--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Tufa.ai</title>
 
-  <link rel="icon" type="image/png" href="/images/benjamin-crouzier.png" />
+  <link rel="icon" type="image/png" href="/images/tufa.png" />
   <style>
 .avatar-image {
     max-width: 80px;
