--- a/public/index.html
+++ b/public/index.html
@@ -83,8 +83,9 @@
   <h2>About</h2>
   <p>
     We are a small team of phds and computer scientists embarking on a mission to try and make some
-    progress in AI research. We acknowledge the difficulty of the endeavor but we believe that dedicated
-    and sustained effort can go a long way.
+    progress in AI research.
+    <!--We acknowledge the difficulty of the endeavor but we believe that dedicated-->
+    <!--and sustained effort can go a long way.-->
   </p>
 
   <h2>Long term mission</h2>
