--- a/public/index.html
+++ b/public/index.html
@@ -191,10 +191,12 @@
     <div class="ai_superstar">
       <div class="image">
         <img width="90" height="90"
-             src="/images/dany.png">
+             src="/images/dany.jpg">
       </div>
       <div class="bio">
-        <h4>Dany V</h4>
+        <h4>
+          <a href="https://www.linkedin.com/in/dany-volk-97279a151/">Dany Volk</a>
+        </h4>
         <p>Co-founder*, Engineering and Research</p>
       </div>
     </div>
