--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
 
   <h2 id="team">Team</h2>
   <p>
-    (The team may change slightly at incorporation, * indicates uncertainty)
+    (The team may change slightly at incorporation)
   </p>
 
   <div id="team_container">
@@ -139,6 +139,7 @@
       </div>
     </div>
 
+<!--
     <div class="ai_superstar">
       <div class="image">
         <a href="https://www.linkedin.com/in/paul-armand-assus-95719052/">
@@ -155,6 +156,7 @@
         <p>Co-founder, Engineering and Research</p>
       </div>
     </div>
+-->
 
     <div class="ai_superstar">
       <div class="image">
@@ -169,10 +171,11 @@
             Antoine Crouzier
           </a>
         </h4>
-        <p>Co-founder*, Engineering and Research</p>
+        <p>Co-founder, Engineering and Research</p>
       </div>
     </div>
 
+<!--
     <div class="ai_superstar">
       <div class="image">
         <a href="https://www.linkedin.com/in/gearnode/">
@@ -187,6 +190,7 @@
         <p>Co-founder*, Engineering and Research</p>
       </div>
     </div>
+-->
 
     <div class="ai_superstar">
       <div class="image">
@@ -197,7 +201,7 @@
         <h4>
           <a href="https://www.linkedin.com/in/dany-volk-97279a151/">Dany Volk</a>
         </h4>
-        <p>Co-founder*, Engineering and Research</p>
+        <p>Co-founder, Engineering and Research</p>
       </div>
     </div>
 
