--- a/public/index.html
+++ b/public/index.html
@@ -243,8 +243,7 @@
     The primary motivation for us to embark in such an adventure is a strong desire to know more about intelligence,
     so we value
     curiosity above all. Because the difficulty of making progress in the field of AI is so great, we
-    also value ambition and perseverance. And because research is plagued with many dead ends, we pay
-    close attention to boredom: it can be seen a strong regularisation mechanism telling us where not to go.
+    also value ambition and perseverance.
   </p>
 
   <h2>What's up with the name Tufa ?</h2>
